# pythonic-fp-splitends

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  pyproject.toml
.github/workflows/: static.yml
docs/: Makefile  conf_custom.py  conf_devel.py  conf_release.py  gen_conf.py  index_custom.rst  index_devel.rst  index_release.rst  requirements.txt
docs/source/: api_pypi.rst  changelog.rst  conf.py  description.rst  index.rst  releases.rst  usage.rst
docs/source/_static/: custom.css
docs/source/api/: index.rst  splitend_node.rst
docs/source/docs/: splitend.rst
src/pythonic_fp/splitends/: __init__.py  splitend.py  splitend.pyi  splitend_node.py  splitend_node.pyi
tests/: test_splitend.py  test_splitend_node.py
