[project]
name = "pythonic-fp.splitends"
version = "0.30.0"
readme = "README.rst"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
keywords = ["SplitEnd", "lifo", "stack"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["pythonic-fp.containers >=2.0.0"]
dynamic = ["description"]

[project.urls]
Changelog = "https://github.com/grscheller/pythonic-fp-splitends/blob/main/CHANGELOG.rst"
Documentation = "https://grscheller.github.io/pythonic-fp/maintained/splitends"
Homepage = "https://github.com/grscheller/pythonic-fp/blob/main/README.rst"
Source = "https://github.com/grscheller/pythonic-fp-splitends"

[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = ["dist", "tests", ".gitignore", ".mypy_cache", ".pytest_cache"]

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
implicit_reexport = false
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp]
python_path = [
  "/home/grs/devel/pypi/fptools/pythonic-fp-splitends/src",
  "/home/grs/devel/pypi/fptools/pythonic-fp-containers/src",
]

[tool.pylsp-mypy]
enabled = true
live-mode = true
strict = true
report_progress = true
exclude = ["tests/.*"]

[tool.pytest.ini_options]
consider_namespace_packages = true
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
